--- a/index.html
+++ b/index.html
@@ -48,30 +48,30 @@
                 <div class="cadre">
                 </div>
                 <div>
-                    <h1>Vous pouvez retrouver nos vins à ces adresses-ci : 
-                    <a href="http://www.alimentationducentre.be/">Alimentation du centre <span>Aubel</span></a>
-                    <a href="http://magasins.carrefour.eu/fr/s/carrefour/carrefour-market-aubel/719">Carrefour Market <span>Aubel</span></a>
-                    <a href="https://lpdpp.be/">Le Panier des Producteurs Passionnés <span>Berneau</span></a>
-                    <a href="https://www.facebook.com/fermetridieu/">La ferme Tri Dieu <span>Bilstain</span></a>
-                    <a href="http://www.fermedelawaide.be/">La ferme de la Waide <span>Blegny</span></a>
-                    <a href="http://www.fermedegerardsart.be/cms/">La ferme de Gérard Sart <span>Julémont</span></a>
-                    <a href="http://www.100lg.be/temp/">100% Liègeois <span>Liège</span></a>
-                    <a href="http://chezgarcon.be/">Chez garçon <span>Liège</span></a>
-                    <a href="http://le-potiquet.business.site/">Le potiquet <span>Liège</span></a>
-                    <a href="https://www.lesvintrepides.com/">Les vintrépides <span>Liège</span></a>
-                    <a href="http://www.bsmvins.be/">Vin qu'on sème <span>Liège</span></a>
-                    <a href="http://www.terredherbage.be/index.html">Terre d'Herbage <span>Malmedy</span></a>
-                    <a href="https://bergamote-fleurs.be/vins/">Bergamote <span>Pépinster</span></a>
-                    <a href="https://lecomptoirduloup.be/">Le comptoir du Loup <span>Solwaster</span></a>
-                    <a href="https://lamaisonduterroir.online/">La maison du Terroir <span>Soumagne</span></a>
-                    <a href="">Le Wallonia <span>Trooz</span></a>
-                    <a href="https://magasins.carrefour.eu/fr/s/carrefour/carrefour-market-vise/559">Carrefour market <span>Visé</span></a>
-                    <a href="https://www.facebook.com/profile.php?id=100042841015226">Maison Buchet <span>Xhendelesse</span></a></h1>
-                    
-                    <h1><a href="http://www.afspanningdeswaen.be/">Afspanning de Swaen <span>Fourons<span></a>
-                    <a href="http://blaes.business.site/">Le Blaes <span>Liège<span></a>
-                    <a href="http://www.gulpdal.nl/">Romantic Hotel "Het Gulpdal" <span>Slenaken<span></a>
-                    <a href="http://www.auxalentours.be/">Aux Alentours <span>Verviers<span></a></h1>
+                    <h1>Retrouvez les lieux où nos vins sont disponnibles, pas partout, mais franchement presque, <a href="https://www.google.com/maps/d/u/0/edit?mid=1aR4boVJ-GSEzVxrzZOJMpyXyKDthX0g&usp=sharing">par ici (bouton pour voir la carte)</a>. Pour plus d'informations sur nos revendeurs :</h1>
+
+                    <p><a href="http://www.alimentationducentre.be/">Alimentation du centre (Aubel)</a>,
+                    <a href="http://magasins.carrefour.eu/fr/s/carrefour/carrefour-market-aubel/719">Carrefour Market (Aubel)</a>,
+                    <a href="https://lpdpp.be/">Le Panier des Producteurs Passionnés (Berneau)</a>,
+                    <a href="https://www.facebook.com/fermetridieu/">La ferme Tri Dieu (Bilstain)</a>,
+                    <a href="http://www.fermedelawaide.be/">La ferme de la Waide (Blegny)</a>,
+                    <a href="http://www.fermedegerardsart.be/cms/">La ferme de Gérard Sart (Julémont)</a>,
+                    <a href="http://www.100lg.be/temp/">100% Liègeois (Liège)</a>,
+                    <a href="http://chezgarcon.be/">Chez garçon (Liège)</a>,
+                    <a href="http://le-potiquet.business.site/">Le potiquet (Liège)</a>,
+                    <a href="https://www.lesvintrepides.com/">Les vintrépides (Liège)</a>,
+                    <a href="http://www.bsmvins.be/">Vin qu'on sème (Liège)</a>,
+                    <a href="http://www.terredherbage.be/index.html">Terre d'Herbage (Malmedy)</a>,
+                    <a href="https://bergamote-fleurs.be/vins/">Bergamote (Pépinster)</a>,
+                    <a href="https://lecomptoirduloup.be/">Le comptoir du Loup (Solwaster)</a>,
+                    <a href="https://lamaisonduterroir.online/">La maison du Terroir (Soumagne)</a>,
+                    <a href="">Le Wallonia (Trooz)</a>,
+                    <a href="https://magasins.carrefour.eu/fr/s/carrefour/carrefour-market-vise/559">Carrefour market (Visé)</a>,
+                    <a href="https://www.facebook.com/profile.php?id=100042841015226">Maison Buchet (Xhendelesse)</a>,
+                    <a href="http://www.afspanningdeswaen.be/">Afspanning de Swaen (Fourons)</a>,
+                    <a href="http://blaes.business.site/">Le Blaes (Liège)</a>,
+                    <a href="http://www.gulpdal.nl/">Romantic Hotel "Het Gulpdal" (Slenaken)</a>,
+                    <a href="http://www.auxalentours.be/">Aux Alentours (Verviers)</a></p>
                 </div>
               </section>
 
