Ajouter un peu de couleur hein

--- a/index.html
+++ b/index.html
@@ -22,34 +22,36 @@
     <body>
         <header>
             <a href="index"><img src="library/elements/dalaheimcastellum.png" alt="dalaheim-castellum" title="dalaheim-castellum"></a>
+            <img src="library/elements/soleil.png" style="width: 160px; position: absolute; top: 17px; left: 10px; z-index: -10;">
+            <a href="vins"><img src="library/elements/mycelium.png" alt="mycelium" title="mycelium" style="float: right;"></a>
         </header>
 
         <nav>
-            <a href="vins"><img id="menuButton1" src="library/elements/menu/B/menu.png"
-            data-hover="library/elements/menu/A/menu.png" class="hover-img" alt="menu" title="menu" style="float: right;"></a>
-            <a href="vins"><img id="menuButton2" src="library/elements/menu/B/menu_vertical.png" 
-            data-hover="library/elements/menu/A/menu_vertical.png" class="hover-img" alt="menu" title="menu" style="float: right;"></a>
+            
         </nav>
 
         <main>
             <section>
-                <div class="cadre">
-                    <img src="library/elements/chipchip.png" alt="chipchip" title="chipchip">
-                </div>
+                <div class="cadre"><img src="library/elements/chipchip.png" style="max-width: 550px;" class="illu"></div>
                 <div>
                     <h1>Ingénieur agronome, Bart Nyssen possède des vignobles dans le Thier à Liège. Après une étape à Amsterdam des année 70 à 90 et un tour d’Europe, il revient s'installer à Dalhem avec des cépages alors inconnus et les plante dans le vignoble en 1999. Après quelques années de tests, il garde les cépages actuels. Il va alors recommencer à chercher de nouveaux cépages et les installe dans son vignoble en 2010. Ceux-ci sont toujours en phase de tests. Passionné, il donne de son temps pour faire découvrir, aux amateurs de bon vin, un produit bien de chez lui.</h1>
                     <h1 style="margin-bottom: 50px;">Ingénieur, industriel lui, Arthur Joskin commence à aider Bart dans ses travaux mécaniques début 2018. Il prend vite goût aux principes de vinification, aux charmes du domaine et participe entièrement à l'exceptionnelle vendange de 2018. Toujours présent avec Bart dans tous les processus de vinification, il acquiert le satut d'indépendant à titre complémentaire et commence à écouler la production.</h1>
-
                     <p>Dès le IXe siècle, la vigne est cultivée en Belgique. La plupart des régions dont les sols étaient propices à la vigne, ont vu l'apparition de vignobles aux XIVe et XVe siècles. Ce fut le cas à Dalhem. Dans les archives du Royaume à Bruxelles se trouve un document qui décrit en 1394 le "Vignoble du Château" sur les terrains dénommés dans le cadastre "Thiers des vignes" où se trouve maintenant notre vignoble. C'est le comte de Dalhem qui a fait ériger le "Vignoble du Château" sur la pente bien exposée entre le Péri et la courbe de la Berwinne. Du vignoble, nous avons une splendide vue sur le vieux Dalhem, la mine de Blegny et tous les villages au sud de Dalhem. Au nord et au nord-est, les ceps sont bien protégés par les bois. Le vignoble est entretenu de façon tout à fait écologique. Aucun pesticide n'est utilisé contre les "mauvaises" herbes ou contre les insectes. Cela est possible quand sont employés de nouveaux cépages résistants et adaptés au terroir. Le chais se trouve dans la vieille ville. Tout y est traité de façon naturelle. Le "Dalaheim Castellum" est donc un vin tout à fait écologique. Le but oenologique est de produire des vins typiques pour Dalhem, des cépages adaptés à la région. Nous avons pour but de créer de nouveaux arômes et goûts bien reconnaissables. Situé sur les pentes de l'ancien vignoble du comte de Dalhem, celui-ci est exposé plein sud et en terrasses. Il se compose de 4500 pieds de vignes répartis sur 2 hectares. Les vignes sont taillées de telle sorte que les raisins soient en hauteur afin que les blaireaux n'y aient pas accés.</p>
                 </div>
-              </section>
+            </section>
 
-              <section>
-                <div class="cadre">
-                </div>
+            <section>
+                <div class="cadre"></div>
                 <div>
-                    <h1>Retrouvez les lieux où nos vins sont disponnibles, pas partout, mais franchement presque, <a href="https://www.google.com/maps/d/u/0/edit?mid=1aR4boVJ-GSEzVxrzZOJMpyXyKDthX0g&usp=sharing">par ici (bouton pour voir la carte)</a>. Pour plus d'informations sur nos revendeurs :</h1>
+                    <img src="library/images/IMG_5523.jpg" style="width: 100%;">
+                    <img src="library/images/IMG_4949.jpg" style="width: 100%;">
+                </div>
+            </section>
 
+            <section>
+                <div class="cadre"></div>
+                <div>
+                    <h1>Nos vins sont disponnibles pas partout, mais franchement presque, retrouvez nos revendeurs <a href="https://www.google.com/maps/d/u/0/edit?mid=1aR4boVJ-GSEzVxrzZOJMpyXyKDthX0g&usp=sharing">via ce lien !</a> Pour plus d'informations sur ceux-ci&nbsp;:</h1>
                     <p><a href="http://www.alimentationducentre.be/">Alimentation du centre (Aubel)</a>,
                     <a href="http://magasins.carrefour.eu/fr/s/carrefour/carrefour-market-aubel/719">Carrefour Market (Aubel)</a>,
                     <a href="https://lpdpp.be/">Le Panier des Producteurs Passionnés (Berneau)</a>,
@@ -73,49 +75,15 @@
                     <a href="http://www.gulpdal.nl/">Romantic Hotel "Het Gulpdal" (Slenaken)</a>,
                     <a href="http://www.auxalentours.be/">Aux Alentours (Verviers)</a></p>
                 </div>
-              </section>
+            </section>
 
-              <section>
-                <img src="library/elements/anim/arthur_et_gentiane.png" alt="arthur et gentiane" title="arthur et gentiane" class="mobile">
-              </section>
-
-            <!--
-
-            <h1>Solaris</h1>
-            <p>Vigne hybride venant d'Allemagne. Ce cépage est bien présent en Alsace et en Allemagne où il fait penser à du Riesling. Ce vin est très résistant et précoce. La précocité d'une vigne permet une arrivée à maturité des raisins plus rapide. Dans nos régions où le climat est moins chaud cela est très important. Il possède une très belle longueur en bouche ainsi que des goûts d'ananas, de litchies, ...
-            <br>Ces vignes ont 10 ans.</p>
-
-            <h1>Blanc Péry</h1>
-            <p>Vigne hybride venant de Suisse. Ce cépage a été spécialement sélectionné pour sa précocité, sa résistance aux maladies et son adaptation à notre climat. Il n'existe nulle part ailleurs que chez nous. Il est unique. Vin blanc à servir frais, il dégage de doux arômes et développe un goût de fruits tropicaux en bouche et une touche acidulée à la fin. Il peut être servi avec du poisson ou en vin de dessert avec une salade de fruits.
-            <br>Ces vignes ont 10 ans.</p>
-
-            <h1>Chenestre</h1>
-            <p>Vigne hybride provenant de Suisse. Ce sont les plus vieilles vignes en vin blanc. Son goût est beaucoup plus long en bouche et sa minéralité prononcée. Il accompagnera particulièrement bien des huîtres ou une truite bien de chez nous.
-            <br>Ces vignes ont 15 ans.</p>
-
-            <h1>Wixhou Gris</h1>
-            <p>Cépage hybride rapporté de Suisse. Cépage unique du vignoble de Dalaheim Castellum. Vin typique réalisé avec du raisin rouge pressé directement. Il possède un goût unique et typé. Il se boit frais à l'apéritif. Son nom vient du lieu dit « Wixhout » dans le village d'Argenteau. Wixhout veut dire "bois béni" (wi = béni & hout = bois). Nous lui avons donné ce nom, car c'est une vigne très sauvage comme ce coin de la Belgique.
-            <br>Ces vignes ont 15 ans.</p>
-
-            <h1>Wichet de la rose</h1>
-            <p>Le Wichet de la rose est un assemblage de différentes vignes mises à l'essai dans le vignoble. La mise à l'essai permet de sélectionner les cépages résistants aux maladies et au climat de notre belle région. C'est un vin léger, légèrement tanique et donc le goût varie d'année en année ce qui fait de lui un vin que l'on redécouvre chaque année.
-            <br>Ces vignes ont 15 ans.</p>
-
-            <h1>Wichet barrique</h1>
-            <p>Le Wichet barrique est le même vin que le Wichet de la rose à l'exception que celui-ci a été élevé dans des fûts de chêne ayant été utilisés pour produire du vin de bordeaux. Après 2 ans en fût, il est mis en bouteille. Cela lui donne un goût plus rond, plus complexe, plus long.</p>
-
-            <h1>Neûr Péry</h1>
-            <p>Cépage hybride venu de Suisse. Vin rouge puissant, tannique avec un goût faisant ressortir les fruits rouges. Il est vieilli en cuve inox pendant 3 à 4 ans afin d'avoir un goût unique, mais aussi pour pouvoir réduire le niveau tannique. Nous laissons faire le temps pour avoir un vin délicieux à boire.
-            <br>Ces vignes ont 20 ans.</p>
-
-            <h1>Cabernet Jura</h1>
-            <p>Cépage hybride venu de Suisse. C'est le vin le plus puissant de notre gamme. Les raisins sont laissés en macération pendant trois à quatre semaines pour produire ce vin à la robe sombre. Les fruits rouges comme le sureau sont présents au nez ainsi qu'au niveau du goût. Un vieillissement dans des cuves inox pendants 3 à 4 ans est nécessaire pour adoucir sont goût.
-            <br>Ces vignes ont 20 ans.</p>
-
-        -->
+            <section>
+                <img src="library/elements/anim/arthur_et_gentiane.png" alt="arthur et gentiane" title="arthur et gentiane" class="mobile illu">
+            </section>
         </main>
 
         <div class="footer">
+            <img src="library/elements/slowdrink.png">
             <h1>bonjour@dalaheim-castellum.eu
             <br>0032 498 83 74</h1>
             <h1><a href="https://www.instagram.com/dalaheimcastellum/" target="_blank" rel="noopener noreferrer">Instagram</a>
