--- a/index.html
+++ b/index.html
@@ -26,21 +26,17 @@
             <a href="vins"><img src="library/elements/mycelium.png" alt="mycelium" title="mycelium" style="float: right;"></a>
         </header>
 
-        <nav>
-            
-        </nav>
-
         <main>
-            <section>
+            <section class="endeux">
                 <div class="cadre"><img src="library/elements/chipchip.png" style="max-width: 550px;" class="illu"></div>
                 <div>
                     <h1>Ingénieur agronome, Bart Nyssen possède des vignobles dans le Thier à Liège. Après une étape à Amsterdam des année 70 à 90 et un tour d’Europe, il revient s'installer à Dalhem avec des cépages alors inconnus et les plante dans le vignoble en 1999. Après quelques années de tests, il garde les cépages actuels. Il va alors recommencer à chercher de nouveaux cépages et les installe dans son vignoble en 2010. Ceux-ci sont toujours en phase de tests. Passionné, il donne de son temps pour faire découvrir, aux amateurs de bon vin, un produit bien de chez lui.</h1>
                     <h1 style="margin-bottom: 50px;">Ingénieur, industriel lui, Arthur Joskin commence à aider Bart dans ses travaux mécaniques début 2018. Il prend vite goût aux principes de vinification, aux charmes du domaine et participe entièrement à l'exceptionnelle vendange de 2018. Toujours présent avec Bart dans tous les processus de vinification, il acquiert le satut d'indépendant à titre complémentaire et commence à écouler la production.</h1>
-                    <p>Dès le IXe siècle, la vigne est cultivée en Belgique. La plupart des régions dont les sols étaient propices à la vigne, ont vu l'apparition de vignobles aux XIVe et XVe siècles. Ce fut le cas à Dalhem. Dans les archives du Royaume à Bruxelles se trouve un document qui décrit en 1394 le "Vignoble du Château" sur les terrains dénommés dans le cadastre "Thiers des vignes" où se trouve maintenant notre vignoble. C'est le comte de Dalhem qui a fait ériger le "Vignoble du Château" sur la pente bien exposée entre le Péri et la courbe de la Berwinne. Du vignoble, nous avons une splendide vue sur le vieux Dalhem, la mine de Blegny et tous les villages au sud de Dalhem. Au nord et au nord-est, les ceps sont bien protégés par les bois. Le vignoble est entretenu de façon tout à fait écologique. Aucun pesticide n'est utilisé contre les "mauvaises" herbes ou contre les insectes. Cela est possible quand sont employés de nouveaux cépages résistants et adaptés au terroir. Le chais se trouve dans la vieille ville. Tout y est traité de façon naturelle. Le "Dalaheim Castellum" est donc un vin tout à fait écologique. Le but oenologique est de produire des vins typiques pour Dalhem, des cépages adaptés à la région. Nous avons pour but de créer de nouveaux arômes et goûts bien reconnaissables. Situé sur les pentes de l'ancien vignoble du comte de Dalhem, celui-ci est exposé plein sud et en terrasses. Il se compose de 4500 pieds de vignes répartis sur 2 hectares. Les vignes sont taillées de telle sorte que les raisins soient en hauteur afin que les blaireaux n'y aient pas accés.</p>
+                    <p class="column">Dès le IXe siècle, la vigne est cultivée en Belgique. La plupart des régions dont les sols étaient propices à la vigne, ont vu l'apparition de vignobles aux XIVe et XVe siècles. Ce fut le cas à Dalhem. Dans les archives du Royaume à Bruxelles se trouve un document qui décrit en 1394 le "Vignoble du Château" sur les terrains dénommés dans le cadastre "Thiers des vignes" où se trouve maintenant notre vignoble. C'est le comte de Dalhem qui a fait ériger le "Vignoble du Château" sur la pente bien exposée entre le Péri et la courbe de la Berwinne. Du vignoble, nous avons une splendide vue sur le vieux Dalhem, la mine de Blegny et tous les villages au sud de Dalhem. Au nord et au nord-est, les ceps sont bien protégés par les bois. Le vignoble est entretenu de façon tout à fait écologique. Aucun pesticide n'est utilisé contre les "mauvaises" herbes ou contre les insectes. Cela est possible quand sont employés de nouveaux cépages résistants et adaptés au terroir. Le chais se trouve dans la vieille ville. Tout y est traité de façon naturelle. Le "Dalaheim Castellum" est donc un vin tout à fait écologique. Le but oenologique est de produire des vins typiques pour Dalhem, des cépages adaptés à la région. Nous avons pour but de créer de nouveaux arômes et goûts bien reconnaissables. Situé sur les pentes de l'ancien vignoble du comte de Dalhem, celui-ci est exposé plein sud et en terrasses. Il se compose de 4500 pieds de vignes répartis sur 2 hectares. Les vignes sont taillées de telle sorte que les raisins soient en hauteur afin que les blaireaux n'y aient pas accés.</p>
                 </div>
             </section>
 
-            <section>
+            <section class="endeux">
                 <div class="cadre"></div>
                 <div>
                     <img src="library/images/IMG_5523.jpg" style="width: 100%;">
@@ -48,11 +44,11 @@
                 </div>
             </section>
 
-            <section>
+            <section class="endeux">
                 <div class="cadre"></div>
                 <div>
-                    <h1>Nos vins sont disponnibles pas partout, mais franchement presque, retrouvez nos revendeurs <a href="https://www.google.com/maps/d/u/0/edit?mid=1aR4boVJ-GSEzVxrzZOJMpyXyKDthX0g&usp=sharing">via ce lien !</a> Pour plus d'informations sur ceux-ci&nbsp;:</h1>
-                    <p><a href="http://www.alimentationducentre.be/">Alimentation du centre (Aubel)</a>,
+                    <h1>Nos vins sont disponnibles pas partout, mais franchement presque, retrouvez nos revendeurs <a href="https://www.google.com/maps/d/u/0/edit?mid=1aR4boVJ-GSEzVxrzZOJMpyXyKDthX0g&usp=sharing"><img src="library/elements/par_ici.png"></a> Pour plus d'informations sur ceux-ci&nbsp;:</h1>
+                    <p class="column"><a href="http://www.alimentationducentre.be/">Alimentation du centre (Aubel)</a>,
                     <a href="http://magasins.carrefour.eu/fr/s/carrefour/carrefour-market-aubel/719">Carrefour Market (Aubel)</a>,
                     <a href="https://lpdpp.be/">Le Panier des Producteurs Passionnés (Berneau)</a>,
                     <a href="https://www.facebook.com/fermetridieu/">La ferme Tri Dieu (Bilstain)</a>,
@@ -83,7 +79,7 @@
         </main>
 
         <div class="footer">
-            <img src="library/elements/slowdrink.png">
+            <!--<img src="library/elements/slowdrink.png">-->
             <h1>bonjour@dalaheim-castellum.eu
             <br>0032 498 83 74</h1>
             <h1><a href="https://www.instagram.com/dalaheimcastellum/" target="_blank" rel="noopener noreferrer">Instagram</a>
