--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </head>
     <body>
         <header>
-            <a href="index"><img src="library/elements/dalaheimcastellum.png" alt="dalaheim-castellum" title="dalaheim-castellum"></a>
+            <a href="vins"><img src="library/elements/dalaheimcastellum.png" alt="dalaheim-castellum" title="dalaheim-castellum"></a>
             <img src="library/elements/soleil.png" style="width: 160px; position: absolute; top: 17px; left: 10px; z-index: -10;">
             <a href="vins"><img src="library/elements/mycelium.png" alt="mycelium" title="mycelium" style="float: right;"></a>
         </header>
