Ajout page Mycelium et rectif style

--- a/vins.html
+++ b/vins.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <link rel="stylesheet" href="style.css" />
         <title>Dalaheim Castellum</title>
-        <link rel="shortcut icon" href="library/elements/icone.ico">
+        <link rel="shortcut icon" href="library/elements/icones/icone_dalaheim.ico">
 
         <meta name="description" content=" ">
         <meta name="keywords" content=" ">
@@ -21,9 +21,9 @@
     </head>
     <body>
         <header>
-            <a href="index"><img src="library/elements/dalaheimcastellum.png" alt="dalaheim-castellum" title="dalaheim-castellum"></a>
+            <a href="index"><img src="library/elements/header/dalaheimcastellum.png" alt="dalaheim-castellum" title="dalaheim-castellum"></a>
             <img src="library/elements/soleil.png" style="width: 160px; position: absolute; top: 17px; left: 10px; z-index: -10;">
-            <a href="index"><img src="library/elements/mycelium.png" alt="mycelium" title="mycelium" style="float: right;"></a>
+            <a href="mycelium"><img src="library/elements/header/mycelium.png" alt="mycelium" title="mycelium" style="float: right;"></a>
         </header>
 
         <main class="grilled">
@@ -68,7 +68,7 @@
             </section>
 
             <section>
-                <img src="library/elements/anim/arthur_et_gentiane.png" alt="arthur et gentiane" title="arthur et gentiane" class="mobile illu">
+                <img src="library/elements/anims/arthur_et_gentiane.png" alt="arthur et gentiane" title="arthur et gentiane" class="mobile illu">
             </section>
         </main>
 
@@ -76,16 +76,16 @@
             <!--<img src="library/elements/slowdrink.png">-->
             <h1>bonjour@dalaheim-castellum.eu
             <br>0032 498 83 74</h1>
-            <h1><a href="https://www.instagram.com/dalaheimcastellum/" target="_blank" rel="noopener noreferrer">Instagram</a> - 
+            <h1><a href="https://www.instagram.com/dalaheimcastellum/" target="_blank" rel="noopener noreferrer">Instagram</a>
             <a href="https://www.facebook.com/profile.php?id=100057304575589" target="_blank" rel="noopener noreferrer">Facebook</a></h1>
             <p>© Dalaheim Castellum, 2024
             <br>Web-développé par <a href="https://baptistelevaux.github.io/">FreePounzel</a></p>
         </div>
 
         <footer>
-            <img src="library/elements/anim/font.png" alt="Image 1" class="image image1" alt="Arthur & Gentiane" title="Arthur & Gentiane">
-            <img src="library/elements/anim/gentiane.png" alt="Image 2" class="image image2" alt="Arthur & Gentiane" title="Arthur & Gentiane">
-            <img src="library/elements/anim/arthur.png" alt="Image 3" class="image image3" alt="Arthur & Gentiane" title="Arthur & Gentiane">
+            <img src="library/elements/anims/font.png" alt="Image 1" class="image image1" alt="Arthur & Gentiane" title="Arthur & Gentiane">
+            <img src="library/elements/anims/gentiane.png" alt="Image 2" class="image image2" alt="Arthur & Gentiane" title="Arthur & Gentiane">
+            <img src="library/elements/anims/arthur.png" alt="Image 3" class="image image3" alt="Arthur & Gentiane" title="Arthur & Gentiane">
         </footer>
 
         <script>
