--- a/mycelium.html
+++ b/mycelium.html
@@ -7,17 +7,17 @@
         <title>Mycelium</title>
         <link rel="shortcut icon" href="library/elements/icones/icone_mycelium.ico">
 
-        <meta name="description" content=" ">
-        <meta name="keywords" content=" ">
-        <meta name="author" content=" ">
+        <meta name="description" content="Mycélium, c'est une petite entreprise de production de vins crée par Arthur Joskin et Gentiane Angeli.">
+        <meta name="keywords" content="vin, vin nature, vin naturel, vin belge, bio, biologique, dalhem, aubel, liège, vignoble, vigneron">
+        <meta name="author" content="Arthur Joskin et Gentiane Angeli">
 
-        <meta property="og:image" content="library/thumbnail.jpg" />
+        <meta property="og:image" content="library/elements/icones/thumbnail.jpg" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content=" " />
-        <meta property="og:title" content=" " />
-        <meta property="og:description" content=" " />
-        <meta property="og:author" content=" " />
-        <meta property="og:keywords" content=" " />
+        <meta property="og:url" content="https://www.dalaheim-castellum.eu/" />
+        <meta property="og:title" content="Mycelium" />
+        <meta property="og:description" content="Mycélium, c'est une petite entreprise de production de vins crée par Arthur Joskin et Gentiane Angeli." />
+        <meta property="og:author" content="Arthur Joskin et Gentiane Angeli" />
+        <meta property="og:keywords" content="vin, vin nature, vin naturel, vin belge, bio, biologique, dalhem, aubel, liège, vignoble, vigneron" />
     </head>
     <body>
         <header>
