--- a/vins.html
+++ b/vins.html
@@ -7,17 +7,17 @@
         <title>Dalaheim Castellum</title>
         <link rel="shortcut icon" href="library/elements/icones/icone_dalaheim.ico">
 
-        <meta name="description" content=" ">
-        <meta name="keywords" content=" ">
-        <meta name="author" content=" ">
+        <meta name="description" content="Vin belge produit à Dalhem par Bart Nyssen et Arthur Joskin dans le vignoble du Thier des Vignes.">
+        <meta name="keywords" content="vin, vin nature, vin naturel, vin belge, bio, biologique, dalhem, aubel, liège, vignoble, vigneron">
+        <meta name="author" content="Arthur Joskin et Gentiane Angeli">
 
-        <meta property="og:image" content="library/thumbnail.jpg" />
+        <meta property="og:image" content="library/elements/icones/thumbnail.jpg" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content=" " />
-        <meta property="og:title" content=" " />
-        <meta property="og:description" content=" " />
-        <meta property="og:author" content=" " />
-        <meta property="og:keywords" content=" " />
+        <meta property="og:url" content="https://www.dalaheim-castellum.eu/" />
+        <meta property="og:title" content="Dalaheim Castellum" />
+        <meta property="og:description" content="Vin belge produit à Dalhem par Bart Nyssen et Arthur Joskin dans le vignoble du Thier des Vignes." />
+        <meta property="og:author" content="Arthur Joskin et Gentiane Angeli" />
+        <meta property="og:keywords" content="vin, vin nature, vin naturel, vin belge, bio, biologique, dalhem, aubel, liège, vignoble, vigneron" />
     </head>
     <body>
         <header>
