--- a/mycelium.html
+++ b/mycelium.html
@@ -28,8 +28,9 @@
 
         <main>
             <section class="endeux">
-                <div class="cadre"><img src="library/elements/anims/anim_boutt.gif" style="max-width: 550px;" class="illu"></div>
+                <div><img src="library/elements/anims/anim_pigeon2.gif" style="max-width: 550px;" class="illu"></div>
                 <div>
+                    <img src="library/elements/petite_histoire.png" style="max-width: 575px; margin: 0 0 40px 0;">
                     <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h1>
                     <h1>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Cliquez sur ce lien vers <a href="vins"><img src="library/elements/liens/nos_vins.png"></a> pour découvrir nos cépages et bouteilles !</h1>
                     <p class="column">Dès le IXe siècle, la vigne est cultivée en Belgique. La plupart des régions dont les sols étaient propices à la vigne, ont vu l'apparition de vignobles aux XIVe et XVe siècles. Ce fut le cas à Dalhem. Dans les archives du Royaume à Bruxelles se trouve un document qui décrit en 1394 le "Vignoble du Château" sur les terrains dénommés dans le cadastre "Thiers des vignes" où se trouve maintenant notre vignoble. C'est le comte de Dalhem qui a fait ériger le "Vignoble du Château" sur la pente bien exposée entre le Péri et la courbe de la Berwinne. Du vignoble, nous avons une splendide vue sur le vieux Dalhem, la mine de Blegny et tous les villages au sud de Dalhem. Au nord et au nord-est, les ceps sont bien protégés par les bois. Le vignoble est entretenu de façon tout à fait écologique. Aucun pesticide n'est utilisé contre les "mauvaises" herbes ou contre les insectes. Cela est possible quand sont employés de nouveaux cépages résistants et adaptés au terroir. Le chais se trouve dans la vieille ville. Tout y est traité de façon naturelle. Le "Dalaheim Castellum" est donc un vin tout à fait écologique. Le but oenologique est de produire des vins typiques pour Dalhem, des cépages adaptés à la région. Nous avons pour but de créer de nouveaux arômes et goûts bien reconnaissables. Situé sur les pentes de l'ancien vignoble du comte de Dalhem, celui-ci est exposé plein sud et en terrasses. Il se compose de 4500 pieds de vignes répartis sur 2 hectares. Les vignes sont taillées de telle sorte que les raisins soient en hauteur afin que les blaireaux n'y aient pas accés.</p>
@@ -37,15 +38,15 @@
             </section>
 
             <section class="endeux">
-                <div class="cadre"></div>
+                <div></div>
                 <div>
-                    <img src="library/images/IMG_6211.jpg" style="width: 100%;">
                     <img src="library/images/IMG_0032.jpg" style="width: 100%;">
+                    <img src="library/images/IMG_6211.jpg" style="width: 100%;">
                 </div>
             </section>
 
             <section class="endeux">
-                <div class="cadre"></div>
+                <div></div>
                 <div>
                     <h1>Retrouvez nos vins en restaurant et en épicerie à des adresses : </h1>
                     <p class="column"><a href="http://www.alimentationducentre.be/">Alimentation du centre (Aubel)</a>,
@@ -79,7 +80,6 @@
         </main>
 
         <div class="footer">
-            <!--<img src="library/elements/slowdrink.png">-->
             <h1>bonjour@dalaheim-castellum.eu
             <br>0032 498 83 74</h1>
             <h1><a href="https://www.instagram.com/dalaheimcastellum/" target="_blank" rel="noopener noreferrer">Instagram</a>
