--- a/vins.html
+++ b/vins.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <link rel="stylesheet" href="style.css" />
         <title>Dalaheim Castellum</title>
-        <link rel="shortcut icon" href="library/elements/icones/icone_dalaheim.ico">
+        <link rel="shortcut icon" href="library/elements/icones/icone_vins.ico">
 
         <meta name="description" content="Vin belge produit à Dalhem par Bart Nyssen et Arthur Joskin dans le vignoble du Thier des Vignes.">
         <meta name="keywords" content="vin, vin nature, vin naturel, vin belge, bio, biologique, dalhem, aubel, liège, vignoble, vigneron">
@@ -26,45 +26,19 @@
             <a href="mycelium"><img src="library/elements/header/mycelium.png" alt="mycelium" title="mycelium" style="float: right;"></a>
         </header>
 
-        <main class="grilled">
-            <section>
-                <img src="library/images/A/solaris.png" data-hover="library/images/B/solaris.png" alt="Solaris" title="Solaris" class="hover-img">
-                <p>Vigne hybride venant d'Allemagne. Ce cépage est bien présent en Alsace et en Allemagne où il fait penser à du Riesling. Ce vin est très résistant et précoce. La précocité d'une vigne permet une arrivée à maturité des raisins plus rapide. Dans nos régions où le climat est moins chaud cela est très important. Il possède une très belle longueur en bouche ainsi que des goûts d'ananas, de litchies, ... Ces vignes ont 10 ans.</p>
-            </section>
-
-            <section>
-                <img src="library/images/A/muscaris.png" data-hover="library/images/B/muscaris.png" alt="Muscaris" title="Muscaris" class="hover-img">
-                <p>Vigne hybride venant de Suisse. Ce cépage a été spécialement sélectionné pour sa précocité, sa résistance aux maladies et son adaptation à notre climat. Il n'existe nulle part ailleurs que chez nous. Il est unique. Vin blanc à servir frais, il dégage de doux arômes et développe un goût de fruits tropicaux en bouche et une touche acidulée à la fin. Il peut être servi avec du poisson ou en vin de dessert avec une salade de fruits. Ces vignes ont 10 ans.</p>
-            </section>
-
-            <section>
-                <img src="library/images/A/souvignier_gris.png" data-hover="library/images/B/souvignier_gris.png"  alt="Souvignier Gris" title="Souvignier Gris"class="hover-img">
-                <p>Vigne hybride provenant de Suisse. Ce sont les plus vieilles vignes en vin blanc. Son goût est beaucoup plus long en bouche et sa minéralité prononcée. Il accompagnera particulièrement bien des huîtres ou une truite bien de chez nous. Ces vignes ont 15 ans.</p>
-            </section>
-
-            <section>
-                <img src="library/images/A/wixhou_gris.png" data-hover="library/images/B/wixhou_gris.png" alt="Wixhou Gris" title="Wixhou Gris" class="hover-img">
-                <p>Cépage hybride rapporté de Suisse. Cépage unique du vignoble de Dalaheim Castellum. Vin typique réalisé avec du raisin rouge pressé directement. Il possède un goût unique et typé. Il se boit frais à l'apéritif. Son nom vient du lieu dit « Wixhout » dans le village d'Argenteau. Wixhout veut dire "bois béni" (wi = béni & hout = bois). Nous lui avons donné ce nom, car c'est une vigne très sauvage comme ce coin de la Belgique. Ces vignes ont 15 ans.</p>
-            </section>
-
-            <section>
-                <img src="library/images/A/bulles.png" data-hover="library/images/B/bulles.png" alt="Bulles Sauvages" title="Bulles Sauvages" class="hover-img">
-                <p>Le Wichet de la rose est un assemblage de différentes vignes mises à l'essai dans le vignoble. La mise à l'essai permet de sélectionner les cépages résistants aux maladies et au climat de notre belle région. C'est un vin léger, légèrement tanique et donc le goût varie d'année en année ce qui fait de lui un vin que l'on redécouvre chaque année. Ces vignes ont 15 ans.</p>
-            </section>
-
-            <section>
-                <img src="library/images/A/neur_pery.png" data-hover="library/images/B/neur_pery.png" alt="Neur Pery" title="Neur Pery" class="hover-img">
-                <p>Cépage hybride venu de Suisse. Vin rouge puissant, tannique avec un goût faisant ressortir les fruits rouges. Il est vieilli en cuve inox pendant 3 à 4 ans afin d'avoir un goût unique, mais aussi pour pouvoir réduire le niveau tannique. Nous laissons faire le temps pour avoir un vin délicieux à boire. Ces vignes ont 20 ans.</p>
-            </section>
-
-            <section>
-                <img src="library/images/A/cabernet_jura.png" data-hover="library/images/B/cabernet_jura.png" alt="Cabernet Jura" title="Cabernet Jura" class="hover-img">
-                <p>Cépage hybride venu de Suisse. C'est le vin le plus puissant de notre gamme. Les raisins sont laissés en macération pendant trois à quatre semaines pour produire ce vin à la robe sombre. Les fruits rouges comme le sureau sont présents au nez ainsi qu'au niveau du goût. Un vieillissement dans des cuves inox pendants 3 à 4 ans est nécessaire pour adoucir sont goût. Ces vignes ont 20 ans.</p>
-            </section>
-
-            <section>
-                <img src="library/images/A/neur_pery_barrique.png" data-hover="library/images/B/neur_pery_barrique.png" alt="Neur Pery Barrique" title="Neur Pery Barrique" class="hover-img">
-                <p>Cépage hybride venu de Suisse. Vin rouge puissant, tannique avec un goût faisant ressortir les fruits rouges. Il est vieilli en cuve inox pendant 3 à 4 ans afin d'avoir un goût unique, mais aussi pour pouvoir réduire le niveau tannique. Nous laissons faire le temps pour avoir un vin délicieux à boire. Ces vignes ont 20 ans.</p>
+        <main>
+            <section class="endeux">
+                <div>
+                    <img src="library/images/solaris.jpg" style="width: 100%;">
+                    <img src="library/images/cabernet_jura.jpg" style="width: 100%;">
+                    <img src="library/images/muscaris.png" style="width: 100%;">
+                    <img src="library/images/souvignier_gris.png" style="width: 100%;">
+                    <img src="library/images/wixhou_gris.jpg" style="width: 100%;">
+                    <img src="library/images/bulles_sauvages.jpg" style="width: 100%;">
+                </div>
+                <div>
+                    
+                </div>
             </section>
 
             <section>
@@ -73,7 +47,6 @@
         </main>
 
         <div class="footer">
-            <!--<img src="library/elements/slowdrink.png">-->
             <h1>bonjour@dalaheim-castellum.eu
             <br>0032 498 83 74</h1>
             <h1><a href="https://www.instagram.com/dalaheimcastellum/" target="_blank" rel="noopener noreferrer">Instagram</a>
@@ -114,6 +87,26 @@
             });
             img.addEventListener('mouseout', () => {
             img.src = originalSrc;
+            });
+            });
+
+            // Text hover
+            const hoverImage = document.createElement('img');
+            hoverImage.classList.add('hover-image');
+            document.body.appendChild(hoverImage);
+            const hoverContainers = document.querySelectorAll('.hover-container');
+            hoverContainers.forEach(container => {
+            container.addEventListener('mouseenter', () => {
+            const imageSrc = container.getAttribute('data-image');
+            hoverImage.src = imageSrc;
+            hoverImage.style.display = 'block';
+            });
+            container.addEventListener('mouseleave', () => {
+            hoverImage.style.display = 'none';
+            });
+            container.addEventListener('mousemove', (event) => {
+            hoverImage.style.top = `${event.pageY + 15}px`;
+            hoverImage.style.left = `${event.pageX + 15}px`;
             });
             });
         </script>
