--- a/mycelium.html
+++ b/mycelium.html
@@ -41,7 +41,7 @@
                 <div></div>
                 <div>
                     <img src="library/images/IMG_0032.jpg" style="width: 100%;">
-                    <img src="library/images/IMG_6211.jpg" style="width: 100%;">
+                    <img src="library/images/IMG_6211.JPG" style="width: 100%;">
                 </div>
             </section>
 
